[package]
name = "jqm-oc"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
dirs = "5.0"
clap_complete = "4.4"
clap_complete_nushell = "0.1"
arboard = "3.4"