[package]
name = "jqm-oc"
version = "1.0.0"
edition = "2024"

[dependencies]
# httpclient
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
# serialization
serde_json = "1.0.150"
# regex
regex = "1.12.4"

# cli arg completer
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
clap_complete_nushell = "4.6.0"

# TUI + path resolution
dialoguer = "0.12.0"
dirs = "6.0.0"

# cross-platform clipboard
arboard = "3.6.1"

# error handling
anyhow = "1.0.103"